<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_menu"
    >



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/canteen_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </android.support.v7.widget.RecyclerView>

        <ImageView
            android:contentDescription="@string/image_placeholder"
            android:layout_marginTop="35dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_chef_hat_92dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/canteen_spinner"
            android:padding="20dp"
            style="@style/Base.Widget.AppCompat.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/canteen_status"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="sans-serif-thin"
            android:text="@string/loading"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/canteen_refresh"
            android:textColor="@color/bg_menu"
            android:text="@string/update"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>