<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="2dp"
    android:elevation="8sp"
    android:id="@+id/item_container"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/dialog_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:fontFamily="sans-serif-thin"
            android:padding="10dp"
            android:text="@string/dialog_search_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/dialog_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:fontFamily="sans-serif-thin"
            android:padding="10dp"
            android:text="@string/dialog_search_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dialog_input"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_search_hint"
                ><requestFocus/></EditText>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/dialog_cancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@android:string/cancel"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/dialog_ok"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@android:string/ok"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>